# clipboard-relay

./: .gitlab-ci.yml  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: architecture.md
pages/: index.html
src/cb/: __init__.py  cli.py  client.py  config.py  crypto.py
tests/: test_cli.py  test_client.py  test_crypto.py
